# leva-agent

./: .env.example  .gitignore  Cargo.toml  README.md  chrome_debug  chrome_debug_start  chrome_debug_stop  pyproject.toml  setup  start  stop
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  memory_store.rs  types.rs
common/src/tools/: files.rs  memory.rs  mod.rs  registry.rs
frontend/: app.js  chat.js  files.js  index.html  jobs.js  markdown.js  settings.js  styles.css  utils.js
memory/: 2026-03-10.md
memory/sessions/: mml9swkk-64pyz.json  mmlansom-vwn8c.json  mmlbgyhg-kdurz.json  mmlbi0w9-3a0pb.json  mmmcfuau-z2zn3.json  stream_test.json  test1.json  tool_test.json
memory/topics/: README.md
myprompts/: 20260311_Perplexity_planning.md  20260311_plan01.md  20260311_plan01_progress.md  20260311_plan01_tasks.md  20260311_plan02_test.md  __ToDo.md  instructions_gmail.md  instructions_gmail_api.md  p00.md  p02.md  p03.md  popular_abilities.md  popular_skills.md  rust_plan.md
myprompts/__OLD/: p01.md  p02.md  p04.md  p05.md  p05_progress.md
prompts/: SYSTEM.md  TOOLS.md
reference/: README.md
server_auto/: Cargo.toml
server_auto/src/: job_runner.rs  main.rs  routes_files.rs  routes_jobs.rs
server_auto/src/cdp_browser/: actions.rs  client.rs  mod.rs  perplexity.rs  routes.rs
server_auto/src/gmail_api/: auth.rs  client.rs  mod.rs  routes.rs
server_llm/: Cargo.toml
server_llm/src/: anthropic_stream.rs  main.rs  routes_chat.rs  routes_models.rs  session_store.rs  streaming.rs  tool_dispatch.rs
soul/: agents.md  soul.md  user.md
src/: __init__.py  __main__.py  agent_loop.py  config.py  main.py  models.py
src/cdp_browser/: __init__.py  actions.py  client.py  perplexity.py  routes.py
src/channels/: cli.py
src/gmail_api/: __init__.py  auth.py  client.py  routes.py
src/memory_store/: __init__.py  short_term.py
src/server_auto/: __init__.py  app.py  browser_manager.py  gmail_actions_playwright.py.bak  job_runner.py  linkedin_actions.py  routes_browser.py  routes_files.py  routes_jobs.py
src/server_llm/: __init__.py  app.py  routes_chat.py  routes_models.py  session_store.py  streaming.py  tool_dispatch.py
src/tools/: base.py  files.py  memory_tools.py  registry.py
