[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvis-cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
async-openai = { workspace = true }
futures = { workspace = true }
