[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
