[package]
name = "server_auto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_auto"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
oauth2 = { workspace = true }
urlencoding = { workspace = true }
